@@ -14,6 +14,7 @@
    - markus@cvs.openbsd.org 2003/01/23 14:06:15
      [scp.1 scp.c]
      scp -12; Sam Smith and others; ok provos@, deraadt@
+ - (djm) Add TIMEVAL_TO_TIMESPEC macros
 
 20030123
  - (djm) OpenBSD CVS Sync
@@ -1073,4 +1074,4 @@
      save auth method before monitor_reset_key_state(); bugzilla bug #284;
      ok provos@
 
-$Id: ChangeLog,v 1.2586 2003/01/24 00:37:38 djm Exp $
+$Id: ChangeLog,v 1.2587 2003/01/24 00:50:32 djm Exp $
